# zkmega

./: .gitignore  404.html  Cargo.toml  EXAMPLE.md  README.md  benchmark.html  book.toml  contract.html  curve.html  curves.html  example.html  index.html  megaclite.rs  metis.html  pairing.html  pallet-contracts.html  print.html  searchindex.js  searchindex.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: build.yml  clippy.yml  gh-pages.yml  rust.yml
arkworks_curve/src/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  lib.rs
bn_bls_curve/: Cargo.toml
bn_bls_curve/src/: alt_bn128.rs
book/: README.md  SUMMARY.md  benchmark.md  contract.md  curves.md  example.md  metis.md  pairing.md  pallet-contracts.md
book/milestones/: README.md
crates/arkworks/: Cargo.toml
crates/arkworks/src/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  curve.rs  derive.rs  lib.rs  ops.rs
crates/arkworks/src/groth16/: mod.rs
crates/arkworks/src/tests/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  mod.rs
crates/arkworks/src/tests/curve/: bw6_761.rs  cp6_782.rs  mod.rs
crates/curve/: Cargo.toml  lib.rs
crates/curve/arkworks/: Cargo.toml
crates/curve/arkworks/src/: derive.rs  lib.rs  ops.rs  result.rs
crates/curve/arkworks/src/groth16/: mod.rs  verify.rs
crates/curve/arkworks/src/tests/: mimc.rs
crates/curve/arkworks/src/tests/curve/: bls12_377.rs  bw6_761.rs
crates/curve/matter-labs/src/: result.rs
crates/curve/src/: derive.rs  error.rs  lib.rs  ops.rs  result.rs
crates/curve/src/groth16/: verify.rs
crates/curve/src/tests/: mimc.rs
crates/curve/src/tests/curve/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  mod.rs
crates/curve/zcash/src/: alt_bn128.rs  bls12_381.rs  lib.rs  verifier.rs
crates/eddsa/: Cargo.toml
crates/eddsa/src/: eddsa.rs  etec.rs  jubjub.rs  lib.rs  verifier.rs  w_naf.rs
crates/groth16/: Cargo.toml
crates/groth16/src/: lib.rs  verify.rs
crates/matter-labs/: Cargo.toml
crates/matter-labs/src/: curve.rs  lib.rs
crates/merkle-tree/: Cargo.toml
crates/merkle-tree/src/: lib.rs  merkle_tree.rs  mimc.rs
crates/tests/: Cargo.toml
crates/tests/src/matter_labs/: parse.rs
crates/tests/src/zcash/: raw_bls_sha256.rs  raw_bn_sha256.rs
crates/zcash/: Cargo.toml
crates/zcash/src/: lib.rs
milestones/: index.html
src/: .#lib.rs  alt_bn128.rs  altbn_128.rs  bls12_381.rs  curves.rs  lib.rs  parse.rs  result.rs  scratch.rs  util.rs
src/arkworks/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  mod.rs
src/groth16/: mod.rs
src/groth16/verify/: arkworks.rs  mod.rs
src/raw_bn_bls/: alt_bn128.rs  bls12_381.rs  mod.rs
tests/: Cargo.toml  altbn_128.rs  raw_bls_mimc.rs  raw_bls_sha256.rs  raw_bn_mimc.rs  raw_bn_sha256.rs
tests/src/: lib.rs
tests/src/arkworks/: bench.rs  mod.rs  ops.rs  verify.rs
tests/src/arkworks/verify_proof/: mimc_bls12_377.rs  mimc_bls12_381.rs  mimc_bn254.rs  mimc_bw6_761.rs  mimc_cp6_782.rs  mod.rs
tests/src/matter_labs/: altbn_128.rs  mod.rs  verify.rs
tests/src/zcash/: mod.rs  raw_bls_mimc.rs  raw_bls_sha256.rs  raw_bn_mimc.rs  raw_bn_sha256.rs
