[package]
name = "megaclite"
version = "0.1.0"
authors = ["Megaclite <https://github.com/patractlabs/megaclite>"]
edition = "2018"

[dependencies]
bellman_ce = { version = "0.3.0", default-features = false }
arkworks_curve = { package = "arkworks-curve", path = "crates/arkworks"}
bn_bls_curve = { package = "zcash-curve", path = "crates/zcash"}

num-bigint = "0.3"
num-traits = "0.2"
rand = "0.4"
group = "0.8.0"

rust-crypto = "0.2.36"
sapling_crypto_ce = { package = "sapling-crypto_ce", git = "https://github.com/matter-labs/sapling-crypto", branch = "master" }
rustc-hex = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

[workspace]
members = [
    "crates/arkworks",
    "crates/zcash",
    "crates/matter-labs",
]

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true