[package]
name = "tests"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dev-dependencies]
arkworks = { package = "zkmega-arkworks", path = "../crates/curve" }

# Git deps
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-bn254 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
ark-cp6-782 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false }
sapling_crypto_ce = { package = "sapling-crypto_ce", git = "https://github.com/matter-labs/sapling-crypto", branch = "master" }

# crates.io deps
hex = "^0"
rustc-hex = { version = "2", default-features = false }
bellman_ce = { version = "0.3.0", default-features = false }
num-bigint = "0.3"
num-traits = "0.2"
rand = { version = "0.7", default-features = false }
rust-crypto = "0.2.36"
parity-scale-codec = { version = "2.0.0", default-features = false, features = [ "derive" ] }
