[package]
name = "tests"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-bigint = "0.4"
num-traits = "0.2"
rand = { version = "0.8", default-features = false }

# Parity
parity-scale-codec = { version = "2.1", default-features = false, features = [ "derive" ] }

## Arkworks
ark-std = { version = "0.3", default-features = false }
ark-bls12-377 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.3", default-features = false }
ark-cp6-782 = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", default-features = false }
ark-relations = { version = "0.3", default-features = false }
ark-groth16 = { version = "0.3", default-features = false }

# zkMega
arkworks = { package = "zkmega-arkworks", path = "../crates/curve" }
