[package]
name = "megaclite-matter-labs"
version = "0.1.0"
authors = ["Megaclite <https://github.com/patractlabs/megaclite>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman_ce = { version = "0.3.0", default-features = false }
