[package]
name = "merkle-tree"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkp-u256 = { git = "https://github.com/patractlabs/OpenZKP", branch = "master"}
tiny-keccak = { version = "2.0", features = ["fips202"] }
once_cell = "1.5.2"

[dependencies.num-traits]
version = "0.2.10"
default_features = false