[package]
name = "tests"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dev-dependencies]
matter_labs = { package = "megaclite-matter-labs", path = "../matter-labs" }
zcash = { package = "megaclite-zcash", path = "../zcash" }
bellman_ce = { version = "0.3.0", default-features = false }
num-bigint = "0.3"
num-traits = "0.2"
rand = "0.4"
rust-crypto = "0.2.36"
sapling_crypto_ce = { package = "sapling-crypto_ce", git = "https://github.com/matter-labs/sapling-crypto", branch = "master" }
rustc-hex = { version = "2", default-features = false }