[package]
name = "zcash-curve"
version = "0.1.0"
authors = ["Megaclite <https://github.com/patractlabs/megaclite>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman_ce = { version = "0.3.0", default-features = false }
bls = { package = "bls12_381", version = "0.3.1" }
bn = { git = "https://github.com/paritytech/bn", default-features = false }
num-bigint = "0.3"
num-traits = "0.2"
group = "0.8.0"

pairing_ce = "0.24.2"
rustc-hex = { version = "2", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"